Please view this file on the master branch, on stable branches it's out of date.

Not yet released
* Bioklubben: Use https. It's secure and http page no longer exists.

v1.9.11 (2016-10-26)
* Warn about disabled banks in the transactions list
* Show warning text about disabled banks in the main activity
* Removes support for TrustBuddy since they're no longer in business
* Removes support for Audi since they require MobiltBankId
* Removes support for VolvoFinans since they require MobiltBankId
* Removes support for EasyCard since they require MobiltBankId
* Removes support for Preem since they require MobiltBankId
* Removes support for ResursBank since they require MobiltBankId
* Removes support for Seat since they require MobiltBankId
* Removes support for Shell since they require MobiltBankId
* Removes support for Skoda since they require MobiltBankId
* Removes support for SupremeCard since they require MobiltBankId
* Removes support for Villabanken since they require MobiltBankId
* Removes support for Volkswagen since they require MobiltBankId
* Merged NordnetDirekt with Nordnet.
* Merged AvanzaMini with Avanza.

v1.9.10.10 (2016-10-17)
* Fixes crash for Amex
* Strikethrough balance in widget indicates update problems.

v1.9.10.9 (2016-10-12)
* Länsförsäkringar: Remove broken web links
* Improve Javadocs in the Bank class
* Make successfully refreshing a disabled bank re-enable it
* Östgötatrafiken: Update certificate
* Östgötatrafiken: Adapt to changed web page
* Skip Server Name Indication (SNI) when refreshing bank certificates to avoid certificate mismatches (bankdroid doesn't use SNI)
* Ticket Rikskortet: Adapt to changed web page
* Removes IcaBanken since they now require BankID
* SveaDirekt: Adapt to changed web page
* Rikslunchen: Adapt to new web service
* AmericanExpress: Use their mobile API

v1.9.10.8 (2016-09-29)
* Add a Volatile account to the Test Bank that always changes its balance.